<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentWeatherFragment" >

    <TextView
        android:id="@+id/cityNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cityNameTextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/temperatureTextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityNameTextView" />

    <TextView
        android:id="@+id/temperatureMaxTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/temperatureMaxTextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/temperatureTextView"
        app:layout_constraintTop_toBottomOf="@+id/temperatureTextView" />

    <TextView
        android:id="@+id/temperatureMinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/temperatureMinTextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/temperatureMaxTextView"
        app:layout_constraintTop_toBottomOf="@+id/temperatureMaxTextView" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/descriptionTextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/temperatureMinTextView"
        app:layout_constraintTop_toBottomOf="@+id/temperatureMinTextView" />

    <TextView
        android:id="@+id/humidityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/humidityTextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/descriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

    <TextView
        android:id="@+id/windspeedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/windspeedTextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/humidityTextView"
        app:layout_constraintTop_toBottomOf="@+id/humidityTextView" />

    <TextView
        android:id="@+id/windDegreeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/windDegreeTextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/windspeedTextView"
        app:layout_constraintTop_toBottomOf="@+id/windspeedTextView" />

    <TextView
        android:id="@+id/cloudinessTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cloudinessTextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/windDegreeTextView"
        app:layout_constraintTop_toBottomOf="@+id/windDegreeTextView" />

    <Button
        android:id="@+id/checkForecastButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="50dp"
        android:text="@string/checkForecastButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tempValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/tempValueTextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/temperatureTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tempMaxValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempMaxValueTextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/temperatureMaxTextView"
        app:layout_constraintEnd_toEndOf="@+id/tempValueTextView" />

    <TextView
        android:id="@+id/tempMinValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempMinValueTextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/temperatureMinTextView"
        app:layout_constraintEnd_toEndOf="@+id/tempMaxValueTextView" />

    <TextView
        android:id="@+id/descValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descValueTextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/descriptionTextView"
        app:layout_constraintEnd_toEndOf="@+id/tempMinValueTextView" />

    <TextView
        android:id="@+id/humidityValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidityValueTextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/humidityTextView"
        app:layout_constraintEnd_toEndOf="@+id/descValueTextView" />

    <TextView
        android:id="@+id/windspeedValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windspeedValueTextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/windspeedTextView"
        app:layout_constraintEnd_toEndOf="@+id/humidityValueTextView" />

    <TextView
        android:id="@+id/windDegreeValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windDegreeValueTextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/windDegreeTextView"
        app:layout_constraintEnd_toEndOf="@+id/windspeedValueTextView" />

    <TextView
        android:id="@+id/cloudinessValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cloudinessValueTextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/cloudinessTextView"
        app:layout_constraintEnd_toEndOf="@+id/windDegreeValueTextView" />

    <ImageView
        android:id="@+id/weatherIconCurrentWeather"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/contentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>